Adding draft news items + new banner image

--- a/2025/2025-12-14-wir.md
+++ b/2025/2025-12-14-wir.md
@@ -1,22 +1,48 @@
 # TKTK
 ## TKTK
 
-![Batman on the move, carrying a roller bag down the street](https://w3w.news/img/batman-emmanuel-denier-3000.jpg)  
-*Photo by Emmanuel Denier via [Unsplash](https://unsplash.com/@sounce_cosplay)*
+![Beautiful high-res closeup of a laptop keyboard and a DSLR camera](https://w3w.news/img/content-tools-phil-monte-3000.jpg)  
+*Photo by Phil Monte via [Unsplash](https://unsplash.com/@philgmonte)*
 
-**Lead item goes here.** Yadda yadda yadda. <!-- Should run ~300 words -->
+**Lead item goes here.** Yadda yadda yadda.
+
+<!-- Blog re: social strategy for '26. Should run ~300 words -->
 
 ### Week in Review: Dec. 7-13, 2025
 
-- Fed rate announcement Wednesday <!-- Link TK. A good hook for a market-related summary item. Wrap in bloodletting at DATCs, etc. --> | Bitcoin near break-even to ETF launch: https://decrypt.co/351573/bitcoin-etf-break-even-level-inflows-slow-support-building
+- **Crypto markets:** Fed rate announcement Wednesday <!-- Link TK. A good hook for a market-related summary item. Wrap in bloodletting at DATCs, etc. --> | Bitcoin near break-even to ETF launch: ([Decrypt](https://decrypt.co/351573/bitcoin-etf-break-even-level-inflows-slow-support-building)) | **Bitcoin’s 2025 ride may end in a net loss as crypto markets increasingly mirror equities** — According to market analysts, Bitcoin’s performance this year has become more correlated with traditional stock markets, possibly setting up a rare annual decline amid heightened macroeconomic volatility and AI-stock driven sentiment swings. ([Reuters][5])[5]: https://www.reuters.com/business/finance/bitcoins-2025-rollercoaster-may-end-low-2025-12-09/?utm_source=chatgpt.com "Bitcoin's 2025 rollercoaster may end on a low" <!-- News summary drafted by ChatGPT --> | **A massive Bitcoin supply shock** appears to be underway. Data from Santiment shows that over 403,000 BTC (roughly 2% of the total supply) have left exchanges in the last year, with a significant chunk moving just this week. Traders are viewing this as a long-term bullish signal, as coins moving to cold storage or institutional vaults typically aren't available for panic-selling. ([TradingView](https://www.tradingview.com/news/newsbtc:94a63409a094b:0-bitcoin-sees-largest-annual-exchange-drop-over-400-000-coins-gone/)) <!-- Draft news summary by Google Gemini -->
 
-- ChatGPT helped spot a crypto "pig butchering" scam. https://decrypt.co/351568/chatgpt-helps-expose-1-million-crypto-pig-butchering-scam
+- ChatGPT helped spot a crypto "pig butchering" scam. A Bay Area woman lost nearly $1 million in a crypto "pig-butchering" scam after meeting a man online who convinced her to invest in fake cryptocurrency schemes. Fortunately, she was able to catch on to the scam with the help of ChatGPT, which warned her that the setup matched known scam patterns and prompted her to contact the police. ([Decrypt](https://decrypt.co/351568/chatgpt-helps-expose-1-million-crypto-pig-butchering-scam)) <!-- Draft news summary by  Leo/Llama 3.1 8B -->
 
-- The Bitwise 10 became the first exchange-traded fund based on a crypto index in the U.S. https://www.theblock.co/post/381910/bitwises-first-ever-crypto-investment-product-gets-uplisted-to-the-nyse-arca
+- **AI Deals:** Meta is finally pulling back from its metaverse ambitions to double down on AI. In a move that feels inevitable to those of us watching the Reality Labs cash burn, Zuckerberg is reportedly cutting the division's budget by up to 30% for 2026. The capital is being aggressively redirected toward AI systems that can deliver revenue in the next 12–24 months, rather than virtual worlds that might (or might not) exist in a decade. ([The AI Citizen](https://theaicitizen.com/p/top-ai-tech-news-through-december-7th)) <!-- Draft news summary by Google Gemini --> | **Anthropic is eyeing a massive IPO** that could value the Amazon-backed lab at over $300 billion. The company is reportedly preparing for a 2026 debut, signaling that the frontier-model landscape is maturing into a phase where public-market durability—and the scrutiny that comes with it—will separate the winners from the research projects. ([The AI Citizen](https://theaicitizen.com/p/top-ai-tech-news-through-december-7th)) <!-- Draft news summary by Google Gemini --> | **IBM to acquire Confluent, Inc., boosting enterprise-grade generative AI infrastructure** — IBM announced a definitive agreement to purchase Confluent for about $11 billion, framing the deal as a step toward building a smart data platform tailored for enterprise generative AI. ([IBM Newsroom][1]) [1]: https://newsroom.ibm.com/2025-12-08-ibm-to-acquire-confluent-to-create-smart-data-platform-for-enterprise-generative-ai?utm_source=chatgpt.com "IBM to Acquire Confluent to Create Smart Data Platform for Enterprise Generative AI" <!-- News summary drafted by ChatGPT --> | **Brookfield and Qatar AI (QAi) launch a $20 billion joint venture to build AI infrastructure in the Middle East** — The new partnership aims to construct high-performance computing capacity to turn Qatar into a regional AI hub, signalling how countries beyond the U.S. and China are competing to host future-facing AI infrastructure. ([Reuters][3]) [3]: https://www.reuters.com/technology/brookfield-qatars-qai-form-20-billion-jv-ai-infrastructure-2025-12-09/?utm_source=chatgpt.com "Brookfield and Qatar launch $20 billion AI infrastructure joint venture" <!-- News summary drafted by ChatGPT -->
 
-- PNC/Coinbase partnership: https://decrypt.co/351625/pnc-bank-enables-bitcoin-trading-customers-coinbase
+- **Crypto integrating with old-school finance:** PNC Bank has launched a new service allowing some customers to trade Bitcoin on its banking platform through a partnership with Coinbase, expanding access to the cryptocurrency. This move marks a significant step for the bank, which is among the first major financial institutions to offer Bitcoin trading, and could signal a shift towards greater adoption of digital assets in the financial sector. ([Decrypt](https://decrypt.co/351625/pnc-bank-enables-bitcoin-trading-customers-coinbase)) <!-- Draft news summary by  Leo/Llama 3.1 8B --> | **Solayer has launched its mainnet alpha,** bringing "real-time finance" applications to the Solana ecosystem. The protocol aims to enable a new class of high-frequency decentralized apps that can leverage Solana's speed. It’s a technical milestone that could help DeFi finally bridge the gap to traditional finance speeds—if the network stability holds up. ([The Block](https://www.theblock.co/)) <!-- Draft news summary by Google Gemini --> | **N3XT, a blockchain-based bank founded by former Signature Bank executives, begins operations** — N3XT, launched under a Wyoming special-purpose bank charter, aims to provide 24/7 dollar-payments infrastructure fully backed by cash or short-term Treasuries, marking a fresh attempt to build banking rails tailored for digital-asset clients. ([Reuters][4]) [4]: https://www.reuters.com/sustainability/boards-policy-regulation/former-signature-bank-executives-launch-blockchain-based-bank-2025-12-04/?utm_source=chatgpt.com "Former Signature Bank executives launch blockchain-based bank" <!-- News summary drafted by ChatGPT --> | The Bitwise 10 became the first exchange-traded fund based on a crypto index in the U.S.  Bitwise has successfully uplisted its crypto index fund, the Bitwise 10 Crypto Index ETF (BITW), to the New York Stock Exchange Arca, making it the first crypto index fund to trade on that exchange. With $1.25 billion in assets under management, BITW holds a basket of 10 leading crypto assets, with bitcoin making up about 75% of the fund's holdings. ([The Block](https://www.theblock.co/post/381910/bitwises-first-ever-crypto-investment-product-gets-uplisted-to-the-nyse-arca)) <!-- Draft news summary by  Leo/Llama 3.1 8B
 
-- In Britain, calls for investigation into crypto donations to UKIP: https://decrypt.co/351613/uk-political-parties-call-for-investigation-into-reform-uk-crypto-donations
+
+- **Crypto politics:** UK political parties are calling for an investigation into a £9 million donation to Nigel Farage's Reform UK from Christopher Harborne, a British crypto billionaire with ties to stablecoin issuer Tether. The Liberal Democrats and Labour Party have raised concerns over potential conflicts of interest, given Farage's public support for cryptocurrencies and Harborne's significant investments in the industry. ([Decrypt](https://decrypt.co/351613/uk-political-parties-call-for-investigation-into-reform-uk-crypto-donations)) <!-- Draft news summary by  Leo/Llama 3.1 8B --> | **The Trump family is doubling down** on its crypto bets. "American Bitcoin," a venture linked to the Trump brothers, just added another $38 million in bitcoin to its balance sheet, bringing its total holdings to nearly 4,800 BTC. It’s yet another signal of how deeply intertwined the incoming administration’s business interests are becoming with the digital asset class. ([The Block](https://www.theblock.co/)) <!-- Draft news summary by Google Gemini -->
+
+
+
+
+<!--
+
+Other candidates...
+
+- **Binance concludes its global “Case Challenge Season 2.0”, underlining ongoing investment in blockchain talent and education** — The competition, aimed at students in India, highlights how major crypto firms are cultivating the next generation of blockchain developers and coders — an indicator of long-term confidence in Web3 talent pipelines. ([timesofindia.indiatimes.com][6]) [6]: https://timesofindia.indiatimes.com/business/cryptocurrency/web3-meets-the-classroom-again-binance-case-challenge-season-2-0-elevates-indias-emerging-blockchain-talent/articleshow/125883957.cms?utm_source=chatgpt.com "Web3 meets the classroom again: Binance Case Challenge Season 2.0 elevates India's emerging blockchain talent" <!-- News summary drafted by ChatGPT
+
+- **Google appoints new AI-infrastructure chief amid compute arms race** — Google has put Amin Vahdat in charge of its AI–infrastructure buildout, underlining the company’s focus on scaling computing capacity as AI adoption rapidly accelerates. ([Reuters][2]) [2]: https://www.reuters.com/business/google-names-amin-vahdat-new-chief-ai-infrastructure-buildout-semafor-reports-2025-12-10/?utm_source=chatgpt.com "Google names Amin Vahdat as new chief of AI infrastructure buildout, Semafor reports" <!-- News summary drafted by ChatGPT
+
+
+-->
+
+
+
+
+
+
+
+
+
 
 ### Market Snapshot
 
@@ -75,17 +101,19 @@
 
 ### Looking Ahead
 
-- Pivot episode on Warner Brothers Discovery fight. ([]())
+- Quantum computing is gaining momentum, with companies like IBM and startups like IonQ racing to bring the technology to market. According to the latest developments, IBM is aiming to achieve quantum advantage by 2029, while IonQ claims to have already reached this milestone with its 36 quadrillion times more powerful machines, sparking a debate on who's leading the charge in this rapidly evolving field. ([Bloomberg](https://www.youtube.com/watch?v=muoMUmJj4XA)) <!-- Draft news summary by  Leo/Llama 3.1 8B -->
 
-- Bloomberg Originals on Quantum Computing ([]()) <!-- Link TK -->
+- **The plot thickens at Warner Brothers Discovery.** Pivot did a good episode on Paramount Skydance's new bid and how it complicates the picture. https://www.youtube.com/watch?v=Q7PO2Hw1DQo
 
-- Werdmuller on RSS https://werd.io/why-rss-matters/ <!-- This could also make a good lead item to riff on. -->
+- **Ben Werdmuller still ❤️ RSS.** ProPublica's tech director says that despite often being dismissed as a "dead" technology, the humble Real Simple Syndication feed is still [widely used and thus a crucial standard](https://werd.io/why-rss-matters/) for distributing news across the web. By leveraging RSS, publishers can maintain control over their distribution, and readers can access the content they want without relying on algorithms or intermediaries.
+Werdmuller on RSS.
 
+<!-- Draft news summary by  Leo/Llama 3.1 8B -->
 ### Odds & Ends
 
-- **Someone, make it stop.** Salesforce CEO and co-founder Marc Benioff says he may rename the company "Agentforce." ([Business Insider](https://www.businessinsider.com/salesforce-marc-benioff-says-he-might-rename-company-agentforce-2025-12))  
+- **America's "Moondoggle:"** In Slate, Joel Achenbach [reports at length](https://slate.com/technology/2025/12/moon-space-nasa-mars-life-trump-elon-musk.html) about Artemis, the NASA mission that is supposed to return Americans to the moon by 2027. At least, that's the official policy. Behind the scenes, however, Achenbach says *a lot* is not going as planned, to the point that a new moon landing is almost certainly much further off than anyone in Washington is admitting.
 
-- Duck-related Seaworld suit: https://www.wsbtv.com/news/trending/woman-suing-sea-world-over-being-hit-by-duck-coaster-wasnt-hit-by-duck-lawyers-say/65P6G76YKFCJXKWA3TO37IOL2Q/
+- **Someone, please make it stop.** Salesforce CEO and co-founder Marc Benioff says he may rename the company "Agentforce." ([Business Insider](https://www.businessinsider.com/salesforce-marc-benioff-says-he-might-rename-company-agentforce-2025-12))  
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
