Writing through news summaries...

--- a/2025/2025-12-14-wir.md
+++ b/2025/2025-12-14-wir.md
@@ -105,15 +105,18 @@ Other candidates...
 
 - **The plot thickens at Warner Brothers Discovery.** Pivot did a good episode on Paramount Skydance's new bid and how it complicates the picture. https://www.youtube.com/watch?v=Q7PO2Hw1DQo
 
-- **Ben Werdmuller still ❤️ RSS.** ProPublica's tech director says that despite often being dismissed as a "dead" technology, the humble Real Simple Syndication feed is still [widely used and thus a crucial standard](https://werd.io/why-rss-matters/) for distributing news across the web. By leveraging RSS, publishers can maintain control over their distribution, and readers can access the content they want without relying on algorithms or intermediaries.
+- **America's "Moondoggle:"** In Slate, Joel Achenbach [reports at length](https://slate.com/technology/2025/12/moon-space-nasa-mars-life-trump-elon-musk.html) about Artemis, the NASA mission that is supposed to return Americans to the moon by 2027. At least, that's the official policy. Behind the scenes, however, Achenbach says *a lot* is not going as planned, to the point that a new moon landing is almost certainly much further off than anyone in Washington is admitting.
 Werdmuller on RSS.
 
 <!-- Draft news summary by  Leo/Llama 3.1 8B -->
+
 ### Odds & Ends
 
-- **America's "Moondoggle:"** In Slate, Joel Achenbach [reports at length](https://slate.com/technology/2025/12/moon-space-nasa-mars-life-trump-elon-musk.html) about Artemis, the NASA mission that is supposed to return Americans to the moon by 2027. At least, that's the official policy. Behind the scenes, however, Achenbach says *a lot* is not going as planned, to the point that a new moon landing is almost certainly much further off than anyone in Washington is admitting.
+- **Ben Werdmuller still ❤️ RSS.** ProPublica's tech director says that despite often being dismissed as a "dead" technology, the humble Real Simple Syndication feed is still [widely used and thus a crucial standard](https://werd.io/why-rss-matters/) for distributing news across the web. By leveraging RSS, publishers can maintain control over their distribution, and readers can access the content they want without relying on algorithms or intermediaries.
 
-- **Someone, please make it stop.** Salesforce CEO and co-founder Marc Benioff says he may rename the company "Agentforce." ([Business Insider](https://www.businessinsider.com/salesforce-marc-benioff-says-he-might-rename-company-agentforce-2025-12))  
+- Mackenzie philanthropy. <!-- Prof G Markets link tk -->
+
+- **Someone, please make it stop.** Salesforce CEO and co-founder Marc Benioff says he may rename the company "Agentforce." ([Business Insider](https://www.businessinsider.com/salesforce-marc-benioff-says-he-might-rename-company-agentforce-2025-12))  <!-- Share to LinkedIn, Bsky -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
