writing through news summaries

--- a/2025/2025-12-14-wir.md
+++ b/2025/2025-12-14-wir.md
@@ -10,38 +10,15 @@
 
 ### Week in Review: Dec. 7-13, 2025
 
-- **Crypto markets:** Fed rate announcement Wednesday <!-- Link TK. A good hook for a market-related summary item. Wrap in bloodletting at DATCs, etc. --> | Bitcoin near break-even to ETF launch: ([Decrypt](https://decrypt.co/351573/bitcoin-etf-break-even-level-inflows-slow-support-building)) | **Bitcoin’s 2025 ride may end in a net loss as crypto markets increasingly mirror equities** — According to market analysts, Bitcoin’s performance this year has become more correlated with traditional stock markets, possibly setting up a rare annual decline amid heightened macroeconomic volatility and AI-stock driven sentiment swings. ([Reuters][5])[5]: https://www.reuters.com/business/finance/bitcoins-2025-rollercoaster-may-end-low-2025-12-09/?utm_source=chatgpt.com "Bitcoin's 2025 rollercoaster may end on a low" <!-- News summary drafted by ChatGPT --> | **A massive Bitcoin supply shock** appears to be underway. Data from Santiment shows that over 403,000 BTC (roughly 2% of the total supply) have left exchanges in the last year, with a significant chunk moving just this week. Traders are viewing this as a long-term bullish signal, as coins moving to cold storage or institutional vaults typically aren't available for panic-selling. ([TradingView](https://www.tradingview.com/news/newsbtc:94a63409a094b:0-bitcoin-sees-largest-annual-exchange-drop-over-400-000-coins-gone/)) <!-- Draft news summary by Google Gemini -->
+- **The Securities and Exchange Commission** effectively greenlighted blockchain-based trading of U.S.-listed securities for the first time. The market watchdog said the Depository Trust & Clearing Corp., which financially guarantees all trades on Wall Street's public stock exchanges, can offer a tokenization service for approved assets, including constituents of the Russell 1000 stock index and U.S. Treasury debt. ([CoinDesk](https://www.coindesk.com/policy/2025/12/12/u-s-sec-gives-implicit-nod-for-tokenized-stocks))
 
-- ChatGPT helped spot a crypto "pig butchering" scam. A Bay Area woman lost nearly $1 million in a crypto "pig-butchering" scam after meeting a man online who convinced her to invest in fake cryptocurrency schemes. Fortunately, she was able to catch on to the scam with the help of ChatGPT, which warned her that the setup matched known scam patterns and prompted her to contact the police. ([Decrypt](https://decrypt.co/351568/chatgpt-helps-expose-1-million-crypto-pig-butchering-scam)) <!-- Draft news summary by  Leo/Llama 3.1 8B -->
+- **New York's governor signed into law** America's first regulations requiring advertisers to disclose AI-generated content. But the new law could face a legal challenge from the federal Department of Justice. ([Decrypt](https://decrypt.co/352132/new-york-mandates-ai-advertising-disclosures-faces-showdown-over-trump-executive-order))
 
-- **AI Deals:** Meta is finally pulling back from its metaverse ambitions to double down on AI. In a move that feels inevitable to those of us watching the Reality Labs cash burn, Zuckerberg is reportedly cutting the division's budget by up to 30% for 2026. The capital is being aggressively redirected toward AI systems that can deliver revenue in the next 12–24 months, rather than virtual worlds that might (or might not) exist in a decade. ([The AI Citizen](https://theaicitizen.com/p/top-ai-tech-news-through-december-7th)) <!-- Draft news summary by Google Gemini --> | **Anthropic is eyeing a massive IPO** that could value the Amazon-backed lab at over $300 billion. The company is reportedly preparing for a 2026 debut, signaling that the frontier-model landscape is maturing into a phase where public-market durability—and the scrutiny that comes with it—will separate the winners from the research projects. ([The AI Citizen](https://theaicitizen.com/p/top-ai-tech-news-through-december-7th)) <!-- Draft news summary by Google Gemini --> | **IBM to acquire Confluent, Inc., boosting enterprise-grade generative AI infrastructure** — IBM announced a definitive agreement to purchase Confluent for about $11 billion, framing the deal as a step toward building a smart data platform tailored for enterprise generative AI. ([IBM Newsroom][1]) [1]: https://newsroom.ibm.com/2025-12-08-ibm-to-acquire-confluent-to-create-smart-data-platform-for-enterprise-generative-ai?utm_source=chatgpt.com "IBM to Acquire Confluent to Create Smart Data Platform for Enterprise Generative AI" <!-- News summary drafted by ChatGPT --> | **Brookfield and Qatar AI (QAi) launch a $20 billion joint venture to build AI infrastructure in the Middle East** — The new partnership aims to construct high-performance computing capacity to turn Qatar into a regional AI hub, signalling how countries beyond the U.S. and China are competing to host future-facing AI infrastructure. ([Reuters][3]) [3]: https://www.reuters.com/technology/brookfield-qatars-qai-form-20-billion-jv-ai-infrastructure-2025-12-09/?utm_source=chatgpt.com "Brookfield and Qatar launch $20 billion AI infrastructure joint venture" <!-- News summary drafted by ChatGPT -->
+- **Some welcome developments for crypto payments:** YouTube [enabled U.S. content creators](https://www.coindesk.com/web3/2025/12/12/youtube-now-allows-content-creators-to-get-paid-in-paypal-s-stablecon-fortune) to receive their earnings in PayPal’s stablecoin PYUSD... Meanwhile, payments startup N3XT, founded by former Signature Bank executives, launched [under a Wyoming banking charter](https://www.reuters.com/sustainability/boards-policy-regulation/former-signature-bank-executives-launch-blockchain-based-bank-2025-12-04/?utm_source=chatgpt.com).
 
-- **Crypto integrating with old-school finance:** PNC Bank has launched a new service allowing some customers to trade Bitcoin on its banking platform through a partnership with Coinbase, expanding access to the cryptocurrency. This move marks a significant step for the bank, which is among the first major financial institutions to offer Bitcoin trading, and could signal a shift towards greater adoption of digital assets in the financial sector. ([Decrypt](https://decrypt.co/351625/pnc-bank-enables-bitcoin-trading-customers-coinbase)) <!-- Draft news summary by  Leo/Llama 3.1 8B --> | **Solayer has launched its mainnet alpha,** bringing "real-time finance" applications to the Solana ecosystem. The protocol aims to enable a new class of high-frequency decentralized apps that can leverage Solana's speed. It’s a technical milestone that could help DeFi finally bridge the gap to traditional finance speeds—if the network stability holds up. ([The Block](https://www.theblock.co/)) <!-- Draft news summary by Google Gemini --> | **N3XT, a blockchain-based bank founded by former Signature Bank executives, begins operations** — N3XT, launched under a Wyoming special-purpose bank charter, aims to provide 24/7 dollar-payments infrastructure fully backed by cash or short-term Treasuries, marking a fresh attempt to build banking rails tailored for digital-asset clients. ([Reuters][4]) [4]: https://www.reuters.com/sustainability/boards-policy-regulation/former-signature-bank-executives-launch-blockchain-based-bank-2025-12-04/?utm_source=chatgpt.com "Former Signature Bank executives launch blockchain-based bank" <!-- News summary drafted by ChatGPT --> | The Bitwise 10 became the first exchange-traded fund based on a crypto index in the U.S.  Bitwise has successfully uplisted its crypto index fund, the Bitwise 10 Crypto Index ETF (BITW), to the New York Stock Exchange Arca, making it the first crypto index fund to trade on that exchange. With $1.25 billion in assets under management, BITW holds a basket of 10 leading crypto assets, with bitcoin making up about 75% of the fund's holdings. ([The Block](https://www.theblock.co/post/381910/bitwises-first-ever-crypto-investment-product-gets-uplisted-to-the-nyse-arca)) <!-- Draft news summary by  Leo/Llama 3.1 8B
+- **Terraform Labs founder Do Kwon received a 15-year prison sentence** in the U.S. for his role in the collapse of the TerraUSD and Luna coins in 2022. Investors lost $40 billion in the meltdown. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-entrepreneur-do-kwon-gets-15-year-prison-sentence-14dfc220?st=8PhieT&reflink=desktopwebshare_permalink))
 
-
-- **Crypto politics:** UK political parties are calling for an investigation into a £9 million donation to Nigel Farage's Reform UK from Christopher Harborne, a British crypto billionaire with ties to stablecoin issuer Tether. The Liberal Democrats and Labour Party have raised concerns over potential conflicts of interest, given Farage's public support for cryptocurrencies and Harborne's significant investments in the industry. ([Decrypt](https://decrypt.co/351613/uk-political-parties-call-for-investigation-into-reform-uk-crypto-donations)) <!-- Draft news summary by  Leo/Llama 3.1 8B --> | **The Trump family is doubling down** on its crypto bets. "American Bitcoin," a venture linked to the Trump brothers, just added another $38 million in bitcoin to its balance sheet, bringing its total holdings to nearly 4,800 BTC. It’s yet another signal of how deeply intertwined the incoming administration’s business interests are becoming with the digital asset class. ([The Block](https://www.theblock.co/)) <!-- Draft news summary by Google Gemini -->
-
-
-
-
-<!--
-
-Other candidates...
-
-- **Binance concludes its global “Case Challenge Season 2.0”, underlining ongoing investment in blockchain talent and education** — The competition, aimed at students in India, highlights how major crypto firms are cultivating the next generation of blockchain developers and coders — an indicator of long-term confidence in Web3 talent pipelines. ([timesofindia.indiatimes.com][6]) [6]: https://timesofindia.indiatimes.com/business/cryptocurrency/web3-meets-the-classroom-again-binance-case-challenge-season-2-0-elevates-indias-emerging-blockchain-talent/articleshow/125883957.cms?utm_source=chatgpt.com "Web3 meets the classroom again: Binance Case Challenge Season 2.0 elevates India's emerging blockchain talent" <!-- News summary drafted by ChatGPT
-
-- **Google appoints new AI-infrastructure chief amid compute arms race** — Google has put Amin Vahdat in charge of its AI–infrastructure buildout, underlining the company’s focus on scaling computing capacity as AI adoption rapidly accelerates. ([Reuters][2]) [2]: https://www.reuters.com/business/google-names-amin-vahdat-new-chief-ai-infrastructure-buildout-semafor-reports-2025-12-10/?utm_source=chatgpt.com "Google names Amin Vahdat as new chief of AI infrastructure buildout, Semafor reports" <!-- News summary drafted by ChatGPT
-
-
--->
-
-
-
-
-
-
-
-
+- **A group of British lawmakers** is [urging the Bank of England](https://decrypt.co/352175/lawmakers-bank-england-stablecoin-proposals-limit-adoption) to reconsider proposals that would cap stablecoin holdings for citizens and businesses, citing concerns that such restrictions would deter innovation and limit adoption of digital finance in the UK. Separately, the UK's Labour Party and Liberal Democrats are [calling for a regulatory investigation](https://decrypt.co/351613/uk-political-parties-call-for-investigation-into-reform-uk-crypto-donations) into crypto-industry donations to the Nigel Farage's hard-right Reform UK.
 
 
 ### Market Snapshot
@@ -101,22 +78,17 @@ Other candidates...
 
 ### Looking Ahead
 
-- Quantum computing is gaining momentum, with companies like IBM and startups like IonQ racing to bring the technology to market. According to the latest developments, IBM is aiming to achieve quantum advantage by 2029, while IonQ claims to have already reached this milestone with its 36 quadrillion times more powerful machines, sparking a debate on who's leading the charge in this rapidly evolving field. ([Bloomberg](https://www.youtube.com/watch?v=muoMUmJj4XA)) <!-- Draft news summary by  Leo/Llama 3.1 8B -->
+- **2026 could see the first $1 trillion tech IPO in the U.S.** Both OpenAI and Anthropic are reportedly planning initial stock listings on Wall Street that could break all previous records. ([Reuters](https://www.reuters.com/business/retail-consumer/anthropic-plans-an-ipo-early-2026-ft-reports-2025-12-03/))  
 
-- **The plot thickens at Warner Brothers Discovery.** Pivot did a good episode on Paramount Skydance's new bid and how it complicates the picture. https://www.youtube.com/watch?v=Q7PO2Hw1DQo
+- **A protracted takeover battle looms at Warner Brothers Discovery.** On Monday, Paramount Skydance [launched a hostile bid](https://www.theguardian.com/business/2025/dec/08/paramount-skydance-warner-bros-discovery-explainer-hostile-bid) for the entirety of the media giant's holdings for $108 billion. The move came in reaction to an [announcement by Netflix](https://about.netflix.com/en/news/netflix-to-acquire-warner-bros) on Dec. 5 that it had reached an agreement to buy Warner's movie studio and streaming businesses only for $83 billion, subject to shareholder approval. For a sharp analysis of the situation, I would recommend [Tuesday's episode](https://www.youtube.com/watch?v=Q7PO2Hw1DQo) of the Pivot podcast, made all the better by the split between co-hosts over which bid will and should win out ultimately. Veteran tech journalist Kara Swisher favors Netflix (as I did [in this newsletter](https://blog.pmckay.com/posts/20251207-netflix-wb-deal.html) last week). But entrepreneur/professor Scott Galloway leans more toward Paramount Skydance.
 
-- **America's "Moondoggle:"** In Slate, Joel Achenbach [reports at length](https://slate.com/technology/2025/12/moon-space-nasa-mars-life-trump-elon-musk.html) about Artemis, the NASA mission that is supposed to return Americans to the moon by 2027. At least, that's the official policy. Behind the scenes, however, Achenbach says *a lot* is not going as planned, to the point that a new moon landing is almost certainly much further off than anyone in Washington is admitting.
-Werdmuller on RSS.
-
-<!-- Draft news summary by  Leo/Llama 3.1 8B -->
+- **America's "Moondoggle:"** In Slate, Joel Achenbach [reports at length](https://slate.com/technology/2025/12/moon-space-nasa-mars-life-trump-elon-musk.html) about Artemis, the NASA mission that is supposed to return Americans to the moon by 2027. At least, that's the official policy. Behind the scenes, however, Achenbach says *a lot* is not going as planned, to the point that a new moon landing is almost certainly much further off than anyone in Washington will publicly admit.
 
 ### Odds & Ends
 
 - **Ben Werdmuller still ❤️ RSS.** ProPublica's tech director says that despite often being dismissed as a "dead" technology, the humble Real Simple Syndication feed is still [widely used and thus a crucial standard](https://werd.io/why-rss-matters/) for distributing news across the web. By leveraging RSS, publishers can maintain control over their distribution, and readers can access the content they want without relying on algorithms or intermediaries.
 
-- Mackenzie philanthropy. <!-- Prof G Markets link tk -->
-
-- **Someone, please make it stop.** Salesforce CEO and co-founder Marc Benioff says he may rename the company "Agentforce." ([Business Insider](https://www.businessinsider.com/salesforce-marc-benioff-says-he-might-rename-company-agentforce-2025-12))  <!-- Share to LinkedIn, Bsky -->
+- **MacKenzie Scott,** ex-wife of Amazon founder Jeff Bezos, has [donated over $26 billion](https://www.yahoo.com/news/articles/mackenzie-scott-worth-36-billion-171756906.html) to charity since their divorce, making her one of the world's most generous philanthropists. That includes almost $7.2 billion in giving in 2025, her most-active year yet. Bravo! 🎁
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
