Writing through lead item

--- a/2025/2025-12-14-wir.md
+++ b/2025/2025-12-14-wir.md
@@ -1,12 +1,34 @@
-# TKTK
+# Make hyperlinks work again.
 ## TKTK
 
-![Beautiful high-res closeup of a laptop keyboard and a DSLR camera](https://w3w.news/img/content-tools-phil-monte-3000.jpg)  
-*Photo by Phil Monte via [Unsplash](https://unsplash.com/@philgmonte)*
+![Woman holding a smartphone](https://w3w.news/img/phoneuser-yura-fresh-1920.jpg)  
+*Photo by Yura Fresh via [Unsplash](https://unsplash.com/@mr_fresh)*
 
-**Lead item goes here.** Yadda yadda yadda.
+*This week I'm re-sharing a post from a few years back about a problem that still affects many people's daily experience of the web. Hope the tips here are helpful as ever, especially for the folks who weren't subscribed when this ran the first time. - PM* ☺️🎅🎄
 
-<!-- Blog re: social strategy for '26. Should run ~300 words -->
+**We've all been there.** You see a headline on the web that's of interest -- a news article or maybe useful information for your work or a hobby. You click aaaaand... hit a paywall. The article flashes on the screen briefly, and then a pop-up prompt blocks you from seeing it unless you buy a subscription.
+
+The good news: This common pattern is completely avoidable through a variety of workarounds that will allow you to read almost any article you want. Publishers have knowingly allowed these technical loopholes to persist for years now, or have even built them into their websites *on purpose* in some cases. (More on that later.)
+
+Geekier readers already know this, I'm sure. But I point it out here for the benefit of my ["normie"](https://www.dictionary.com/e/slang/normie/) friends frustrated with the default "obstacles" thwarting their daily web browsing.
+
+To that end, one particular solution bears special mention: disabling JavaScript in your web browser. JavaScript is the programmatic language of the web that controls dynamic website behaviors, including those infernal paywall pop-ups. If you simply turn off the JavaScript by *changing a setting on your own computer* you're usually left with the full story text and no pop-up.
+
+Voilà. Read to your heart's content. That's it.  
+
+If you're using Chrome, which is currently the most popular web browser globally, the settings to turn off JavaScript should be viewable [here](chrome://settings/content/javascript). You can turn it off completely or site-by-site. (The latter worked better for me in terms of news reading, to be honest. But your mileage may vary.) You can also use that settings page to turn JavaScript back *on*, of course, as it does enable many cool features around the web as well.
+
+If you're using [Brave](https://brave.com/), a pro-privacy browser that's my own daily workhorse, turning off the JavaScript is even easier. Just click on the Brave logo in the main browser bar and toggle the "block scripts" option on and off as needed.
+
+There are a variety of extensions that enable a similar toggle on other browsers, as well as [YouTube tutorials](https://www.youtube.com/results?search_query=turning+off+javascript) about turning off JavaScript in various browsers that I haven't mentioned here, covering both PC and mobile versions.
+
+I estimate that disabling JavaScript will thwart 80% of the paywalls you'll encounter on the web. The only exceptions are publications that have set up server-side paywalls that run on *their* computers, not yours, sometimes called "hard" paywalls in the media industry. These are usually financial publications like the Wall Street Journal, Bloomberg News, and the Financial Times.
+
+So why doesn't everyone in the industry set up their paywall that way? It's because they're trying to balance two strategic goals for their businesses -- generating subscription revenue and maximizing site traffic. These goals are often in tension, so publications purposely make their paywalls "porous," as the traffic from users employing various workarounds still counts in their traffic metrics. Thus it helps generate a little extra ad revenue.
+
+There's been coverage of this tactic in multiple media trade publications like the [Columbia Journalism Review](https://www.cjr.org/business_of_news/news-paywalls-new-york-times-wall-street-journal.php) and [Poynter.org](https://www.poynter.org/commentary/analysis/2022/how-free-service-journalism-and-paywalls-can-coexist/). So rest assured, publishers know about it. In fact, they purposefully exploit it in their own way.
+
+On to the week's (now more accessible) headlines:
 
 ### Week in Review: Dec. 7-13, 2025
 
